--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ nav {
 
 .limitedOffer{
   font-size: 20px;
-  border-bottom: 2px solid green;
   cursor: pointer;
 }
 .navBottom{
@@ -704,4 +703,8 @@ footer {
   .footerMenu {
     margin-bottom: 20px;
   }
+}
+
+.btb {
+  border-bottom: 2px solid green;
 }
